src/objects/Badge_Claim__c.object
<CustomObject>
    <fields>
        <fullName>BC_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>BC Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Badge_Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badge Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badges_Action_cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badges &amp; Action cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bingo_sheets__c</fullName>
        <label>Bingo Sheets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>14</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>16</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>17</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>18</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>19</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>21</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>22</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>23</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>24</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>25</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>26</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>27</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>28</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>29</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>31</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>32</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>33</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>34</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>35</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>36</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broken_sentences_handouts__c</fullName>
        <label>Broken Sentences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>13</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>14</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>16</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>17</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>18</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>19</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>21</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>22</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>23</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>24</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>25</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>26</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>27</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>28</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>29</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>31</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>32</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>33</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>34</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>35</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Ext_Id__c</fullName>
        <label>Contact Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Badge Claims</relationshipLabel>
        <relationshipName>Badge_Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_City__c</fullName>
        <label>Town/City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Badge Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DF_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000000}</displayFormat>
        <label>Badge Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>